# Surch---Fast-File-Search-20-times-daster-than-windows

./: Cargo.toml  LICENSE  README.md
src/: main.rs
