[package]
name = "surch"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.0"
hashbrown = "0.14.3"
rayon = "1.8.1"
tokio = { version = "1.36.0", features = ["full"] }
ignore = "0.4.20"
clipboard = "0.5.0"
open = "5.0.0"
rfd = "0.12.0"
num_cpus = "1.16.0"
 serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"4
